--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "get-this-bread",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "node app.js",
     "restart": "pm2 startOrRestart ecosystem.config.js",
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "latest",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "mysql": "^2.16.0",
     "phone": "^2.3.10"
