--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "latest",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "knex": "^0.16.5",
     "mysql": "^2.16.0",
     "phone": "^2.3.10"
   },
