--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "express": "^4.16.4",
     "knex": "^0.16.5",
     "mysql": "^2.16.0",
-    "phone": "^2.3.10"
+    "node-cron": "^2.0.3",
+    "phone": "^2.3.10",
+    "twilio": "^3.30.3"
   },
   "devDependencies": {
     "pm2": "^3.5.0"
