--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "latest",
-    "dotenv": "^7.0.0",
+    "custom-env": "^1.0.0",
     "express": "^4.16.4",
     "knex": "^0.16.5",
     "mysql": "^2.16.0",
